week2/ex5_2/ex5/ex5Parser.output
   0  $accept : %entry% $end

   1  main : expr EOF

   2  command : expr SEMI
   3          | LET var EQ expr SEMI
   4          | LET REC var var var_expr SEMI
   5          | LET REC var var EQ expr and_expr SEMI

   6  expr : LET var EQ expr IN expr
   7       | LET REC var var var_expr IN expr
   8       | LET REC var var var_expr and_expr IN expr
   9       | IF expr THEN expr ELSE expr
  10       | expr EQ expr
  11       | expr LT expr
  12       | expr PLUS expr
  13       | expr MINUS expr
  14       | expr TIMES expr
  15       | expr DIV expr
  16       | FUN var ARROW expr
  17       | expr apply_expr
  18       | MATCH expr WITH pattern_expr END
  19       | expr CONS expr
  20       | apply_expr

  21  var_expr : EQ expr
  22           | var var_expr

  23  and_expr : AND var var EQ expr and_expr
  24           |

  25  expr_list : expr
  26            | expr COMMA expr_list

  27  pattern_expr : pattern ARROW expr
  28               | pattern ARROW expr OR pattern_expr

  29  pattern : INT
  30          | BOOL
  31          | ID
  32          | LBRACKET RBRACKET
  33          | LPAR pattern COMMA pattern_list RPAR
  34          | pattern CONS pattern

  35  pattern_list : pattern
  36               | pattern COMMA pattern_list

  37  apply_expr : INT
  38             | BOOL
  39             | ID
  40             | LPAR expr RPAR
  41             | LBRACKET RBRACKET

  42  var : ID

  43  %entry% : '\001' main
  44          | '\002' command

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . main  (43)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	main  goto 13
	expr  goto 14
	apply_expr  goto 15


state 2
	%entry% : '\002' . command  (44)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 16
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	command  goto 17
	expr  goto 18
	apply_expr  goto 15


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	apply_expr : INT .  (37)

	.  reduce 37


state 5
	apply_expr : BOOL .  (38)

	.  reduce 38


state 6
	apply_expr : ID .  (39)

	.  reduce 39


state 7
	expr : LET . var EQ expr IN expr  (6)
	expr : LET . REC var var var_expr IN expr  (7)
	expr : LET . REC var var var_expr and_expr IN expr  (8)

	ID  shift 19
	REC  shift 20
	.  error

	var  goto 21


state 8
	expr : IF . expr THEN expr ELSE expr  (9)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 22
	apply_expr  goto 15


state 9
	apply_expr : LPAR . expr RPAR  (40)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 23
	apply_expr  goto 15


state 10
	expr : FUN . var ARROW expr  (16)

	ID  shift 19
	.  error

	var  goto 24


state 11
	expr : MATCH . expr WITH pattern_expr END  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 25
	apply_expr  goto 15


state 12
	apply_expr : LBRACKET . RBRACKET  (41)

	RBRACKET  shift 26
	.  error


state 13
	%entry% : '\001' main .  (43)

	.  reduce 43


state 14
	main : expr . EOF  (1)
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	EOF  shift 33
	CONS  shift 34
	LBRACKET  shift 12
	.  error

	apply_expr  goto 35


state 15
	expr : apply_expr .  (20)

	.  reduce 20


state 16
	command : LET . var EQ expr SEMI  (3)
	command : LET . REC var var var_expr SEMI  (4)
	command : LET . REC var var EQ expr and_expr SEMI  (5)
	expr : LET . var EQ expr IN expr  (6)
	expr : LET . REC var var var_expr IN expr  (7)
	expr : LET . REC var var var_expr and_expr IN expr  (8)

	ID  shift 19
	REC  shift 36
	.  error

	var  goto 37


state 17
	%entry% : '\002' command .  (44)

	.  reduce 44


state 18
	command : expr . SEMI  (2)
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	SEMI  shift 38
	CONS  shift 34
	LBRACKET  shift 12
	.  error

	apply_expr  goto 35


state 19
	var : ID .  (42)

	.  reduce 42


state 20
	expr : LET REC . var var var_expr IN expr  (7)
	expr : LET REC . var var var_expr and_expr IN expr  (8)

	ID  shift 19
	.  error

	var  goto 39


state 21
	expr : LET var . EQ expr IN expr  (6)

	EQ  shift 40
	.  error


state 22
	expr : IF expr . THEN expr ELSE expr  (9)
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	THEN  shift 41
	LPAR  shift 9
	CONS  shift 34
	LBRACKET  shift 12
	.  error

	apply_expr  goto 35


state 23
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	apply_expr : LPAR expr . RPAR  (40)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	RPAR  shift 42
	CONS  shift 34
	LBRACKET  shift 12
	.  error

	apply_expr  goto 35


state 24
	expr : FUN var . ARROW expr  (16)

	ARROW  shift 43
	.  error


state 25
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : MATCH expr . WITH pattern_expr END  (18)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	WITH  shift 44
	CONS  shift 34
	LBRACKET  shift 12
	.  error

	apply_expr  goto 35


state 26
	apply_expr : LBRACKET RBRACKET .  (41)

	.  reduce 41


state 27
	expr : expr PLUS . expr  (12)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 45
	apply_expr  goto 15


state 28
	expr : expr MINUS . expr  (13)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 46
	apply_expr  goto 15


state 29
	expr : expr TIMES . expr  (14)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 47
	apply_expr  goto 15


state 30
	expr : expr DIV . expr  (15)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 48
	apply_expr  goto 15


state 31
	expr : expr EQ . expr  (10)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 49
	apply_expr  goto 15


state 32
	expr : expr LT . expr  (11)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 50
	apply_expr  goto 15


state 33
	main : expr EOF .  (1)

	.  reduce 1


state 34
	expr : expr CONS . expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 51
	apply_expr  goto 15


state 35
	expr : expr apply_expr .  (17)

	.  reduce 17


state 36
	command : LET REC . var var var_expr SEMI  (4)
	command : LET REC . var var EQ expr and_expr SEMI  (5)
	expr : LET REC . var var var_expr IN expr  (7)
	expr : LET REC . var var var_expr and_expr IN expr  (8)

	ID  shift 19
	.  error

	var  goto 52


state 37
	command : LET var . EQ expr SEMI  (3)
	expr : LET var . EQ expr IN expr  (6)

	EQ  shift 53
	.  error


state 38
	command : expr SEMI .  (2)

	.  reduce 2


state 39
	expr : LET REC var . var var_expr IN expr  (7)
	expr : LET REC var . var var_expr and_expr IN expr  (8)

	ID  shift 19
	.  error

	var  goto 54


state 40
	expr : LET var EQ . expr IN expr  (6)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 55
	apply_expr  goto 15


state 41
	expr : IF expr THEN . expr ELSE expr  (9)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 56
	apply_expr  goto 15


state 42
	apply_expr : LPAR expr RPAR .  (40)

	.  reduce 40


state 43
	expr : FUN var ARROW . expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 57
	apply_expr  goto 15


state 44
	expr : MATCH expr WITH . pattern_expr END  (18)

	INT  shift 58
	BOOL  shift 59
	ID  shift 60
	LPAR  shift 61
	LBRACKET  shift 62
	.  error

	pattern_expr  goto 63
	pattern  goto 64


state 45
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr PLUS expr .  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	TIMES  shift 29
	DIV  shift 30
	LPAR  shift 9
	LBRACKET  shift 12
	IN  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12
	EQ  reduce 12
	LT  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	WITH  reduce 12
	OR  reduce 12
	END  reduce 12
	SEMI  reduce 12
	EOF  reduce 12
	CONS  reduce 12
	AND  reduce 12

	apply_expr  goto 35


state 46
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr MINUS expr .  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	TIMES  shift 29
	DIV  shift 30
	LPAR  shift 9
	LBRACKET  shift 12
	IN  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13
	EQ  reduce 13
	LT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	WITH  reduce 13
	OR  reduce 13
	END  reduce 13
	SEMI  reduce 13
	EOF  reduce 13
	CONS  reduce 13
	AND  reduce 13

	apply_expr  goto 35


state 47
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr TIMES expr .  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	LBRACKET  shift 12
	IN  reduce 14
	PLUS  reduce 14
	MINUS  reduce 14
	TIMES  reduce 14
	DIV  reduce 14
	EQ  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	WITH  reduce 14
	OR  reduce 14
	END  reduce 14
	SEMI  reduce 14
	EOF  reduce 14
	CONS  reduce 14
	AND  reduce 14

	apply_expr  goto 35


state 48
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr DIV expr .  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	LBRACKET  shift 12
	IN  reduce 15
	PLUS  reduce 15
	MINUS  reduce 15
	TIMES  reduce 15
	DIV  reduce 15
	EQ  reduce 15
	LT  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	WITH  reduce 15
	OR  reduce 15
	END  reduce 15
	SEMI  reduce 15
	EOF  reduce 15
	CONS  reduce 15
	AND  reduce 15

	apply_expr  goto 35


state 49
	expr : expr . EQ expr  (10)
	expr : expr EQ expr .  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	LPAR  shift 9
	CONS  shift 34
	LBRACKET  shift 12
	IN  reduce 10
	EQ  reduce 10
	LT  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	WITH  reduce 10
	OR  reduce 10
	END  reduce 10
	SEMI  reduce 10
	EOF  reduce 10
	AND  reduce 10

	apply_expr  goto 35


state 50
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr LT expr .  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	LPAR  shift 9
	CONS  shift 34
	LBRACKET  shift 12
	IN  reduce 11
	EQ  reduce 11
	LT  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	WITH  reduce 11
	OR  reduce 11
	END  reduce 11
	SEMI  reduce 11
	EOF  reduce 11
	AND  reduce 11

	apply_expr  goto 35


state 51
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	expr : expr CONS expr .  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	LPAR  shift 9
	CONS  shift 34
	LBRACKET  shift 12
	IN  reduce 19
	EQ  reduce 19
	LT  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	RPAR  reduce 19
	WITH  reduce 19
	OR  reduce 19
	END  reduce 19
	SEMI  reduce 19
	EOF  reduce 19
	AND  reduce 19

	apply_expr  goto 35


state 52
	command : LET REC var . var var_expr SEMI  (4)
	command : LET REC var . var EQ expr and_expr SEMI  (5)
	expr : LET REC var . var var_expr IN expr  (7)
	expr : LET REC var . var var_expr and_expr IN expr  (8)

	ID  shift 19
	.  error

	var  goto 65


state 53
	command : LET var EQ . expr SEMI  (3)
	expr : LET var EQ . expr IN expr  (6)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 66
	apply_expr  goto 15


state 54
	expr : LET REC var var . var_expr IN expr  (7)
	expr : LET REC var var . var_expr and_expr IN expr  (8)

	ID  shift 19
	EQ  shift 67
	.  error

	var  goto 68
	var_expr  goto 69


state 55
	expr : LET var EQ expr . IN expr  (6)
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	IN  shift 70
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	CONS  shift 34
	LBRACKET  shift 12
	.  error

	apply_expr  goto 35


state 56
	expr : IF expr THEN expr . ELSE expr  (9)
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	ELSE  shift 71
	LPAR  shift 9
	CONS  shift 34
	LBRACKET  shift 12
	.  error

	apply_expr  goto 35


state 57
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : FUN var ARROW expr .  (16)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	CONS  shift 34
	LBRACKET  shift 12
	IN  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	WITH  reduce 16
	OR  reduce 16
	END  reduce 16
	SEMI  reduce 16
	EOF  reduce 16
	AND  reduce 16

	apply_expr  goto 35


state 58
	pattern : INT .  (29)

	.  reduce 29


state 59
	pattern : BOOL .  (30)

	.  reduce 30


state 60
	pattern : ID .  (31)

	.  reduce 31


state 61
	pattern : LPAR . pattern COMMA pattern_list RPAR  (33)

	INT  shift 58
	BOOL  shift 59
	ID  shift 60
	LPAR  shift 61
	LBRACKET  shift 62
	.  error

	pattern  goto 72


state 62
	pattern : LBRACKET . RBRACKET  (32)

	RBRACKET  shift 73
	.  error


state 63
	expr : MATCH expr WITH pattern_expr . END  (18)

	END  shift 74
	.  error


state 64
	pattern_expr : pattern . ARROW expr  (27)
	pattern_expr : pattern . ARROW expr OR pattern_expr  (28)
	pattern : pattern . CONS pattern  (34)

	ARROW  shift 75
	CONS  shift 76
	.  error


state 65
	command : LET REC var var . var_expr SEMI  (4)
	command : LET REC var var . EQ expr and_expr SEMI  (5)
	expr : LET REC var var . var_expr IN expr  (7)
	expr : LET REC var var . var_expr and_expr IN expr  (8)

	ID  shift 19
	EQ  shift 77
	.  error

	var  goto 68
	var_expr  goto 78


state 66
	command : LET var EQ expr . SEMI  (3)
	expr : LET var EQ expr . IN expr  (6)
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	IN  shift 70
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	SEMI  shift 79
	CONS  shift 34
	LBRACKET  shift 12
	.  error

	apply_expr  goto 35


state 67
	var_expr : EQ . expr  (21)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 80
	apply_expr  goto 15


state 68
	var_expr : var . var_expr  (22)

	ID  shift 19
	EQ  shift 67
	.  error

	var  goto 68
	var_expr  goto 81


69: shift/reduce conflict (shift 82, reduce 24) on IN
state 69
	expr : LET REC var var var_expr . IN expr  (7)
	expr : LET REC var var var_expr . and_expr IN expr  (8)
	and_expr : .  (24)

	IN  shift 82
	AND  shift 83

	and_expr  goto 84


state 70
	expr : LET var EQ expr IN . expr  (6)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 85
	apply_expr  goto 15


state 71
	expr : IF expr THEN expr ELSE . expr  (9)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 86
	apply_expr  goto 15


state 72
	pattern : LPAR pattern . COMMA pattern_list RPAR  (33)
	pattern : pattern . CONS pattern  (34)

	COMMA  shift 87
	CONS  shift 76
	.  error


state 73
	pattern : LBRACKET RBRACKET .  (32)

	.  reduce 32


state 74
	expr : MATCH expr WITH pattern_expr END .  (18)

	.  reduce 18


state 75
	pattern_expr : pattern ARROW . expr  (27)
	pattern_expr : pattern ARROW . expr OR pattern_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 88
	apply_expr  goto 15


state 76
	pattern : pattern CONS . pattern  (34)

	INT  shift 58
	BOOL  shift 59
	ID  shift 60
	LPAR  shift 61
	LBRACKET  shift 62
	.  error

	pattern  goto 89


state 77
	command : LET REC var var EQ . expr and_expr SEMI  (5)
	var_expr : EQ . expr  (21)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 90
	apply_expr  goto 15


78: shift/reduce conflict (shift 82, reduce 24) on IN
state 78
	command : LET REC var var var_expr . SEMI  (4)
	expr : LET REC var var var_expr . IN expr  (7)
	expr : LET REC var var var_expr . and_expr IN expr  (8)
	and_expr : .  (24)

	IN  shift 82
	SEMI  shift 91
	AND  shift 83

	and_expr  goto 84


state 79
	command : LET var EQ expr SEMI .  (3)

	.  reduce 3


state 80
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	var_expr : EQ expr .  (21)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	CONS  shift 34
	LBRACKET  shift 12
	IN  reduce 21
	SEMI  reduce 21
	AND  reduce 21

	apply_expr  goto 35


state 81
	var_expr : var var_expr .  (22)

	.  reduce 22


state 82
	expr : LET REC var var var_expr IN . expr  (7)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 92
	apply_expr  goto 15


state 83
	and_expr : AND . var var EQ expr and_expr  (23)

	ID  shift 19
	.  error

	var  goto 93


state 84
	expr : LET REC var var var_expr and_expr . IN expr  (8)

	IN  shift 94
	.  error


state 85
	expr : LET var EQ expr IN expr .  (6)
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	CONS  shift 34
	LBRACKET  shift 12
	IN  reduce 6
	THEN  reduce 6
	ELSE  reduce 6
	RPAR  reduce 6
	WITH  reduce 6
	OR  reduce 6
	END  reduce 6
	SEMI  reduce 6
	EOF  reduce 6
	AND  reduce 6

	apply_expr  goto 35


state 86
	expr : IF expr THEN expr ELSE expr .  (9)
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	CONS  shift 34
	LBRACKET  shift 12
	IN  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	WITH  reduce 9
	OR  reduce 9
	END  reduce 9
	SEMI  reduce 9
	EOF  reduce 9
	AND  reduce 9

	apply_expr  goto 35


state 87
	pattern : LPAR pattern COMMA . pattern_list RPAR  (33)

	INT  shift 58
	BOOL  shift 59
	ID  shift 60
	LPAR  shift 61
	LBRACKET  shift 62
	.  error

	pattern  goto 95
	pattern_list  goto 96


state 88
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	pattern_expr : pattern ARROW expr .  (27)
	pattern_expr : pattern ARROW expr . OR pattern_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	OR  shift 97
	CONS  shift 34
	LBRACKET  shift 12
	END  reduce 27

	apply_expr  goto 35


state 89
	pattern : pattern . CONS pattern  (34)
	pattern : pattern CONS pattern .  (34)

	CONS  shift 76
	RPAR  reduce 34
	ARROW  reduce 34
	COMMA  reduce 34


90: reduce/reduce conflict (reduce 21, reduce 24) on SEMI
state 90
	command : LET REC var var EQ expr . and_expr SEMI  (5)
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	var_expr : EQ expr .  (21)
	and_expr : .  (24)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 27
	MINUS  shift 28
	TIMES  shift 29
	DIV  shift 30
	EQ  shift 31
	LT  shift 32
	LPAR  shift 9
	CONS  shift 34
	LBRACKET  shift 12
	IN  reduce 21
	SEMI  reduce 21
	AND  reduce 21

	and_expr  goto 98
	apply_expr  goto 35


state 91
	command : LET REC var var var_expr SEMI .  (4)
